src/OpenCvSharp/Internal/Interop/NativeMethods.XImgProc.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_detect_ellipses_fill")]
        internal static extern int XImgProcEdgeDrawingDetectEllipsesFill(IntPtr detector, double[] ellipses, int ellipseCapacity, out int ellipseCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_create")]
        internal static extern int XImgProcEdgeBoxesCreate(float alpha, float beta, float eta, float minScore, int maxBoxes, float edgeMinMag, float edgeMergeThr, float clusterMinMag, float maxAspectRatio, float minBoxArea, float gamma, float kappa, out IntPtr edgeBoxes);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_release_handle")]
        internal static extern void XImgProcEdgeBoxesReleaseHandle(IntPtr edgeBoxes);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_bounding_boxes_count")]
        internal static extern int XImgProcEdgeBoxesGetBoundingBoxesCount(IntPtr edgeBoxes, IntPtr edgeMap, IntPtr orientationMap, out int boxCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_bounding_boxes_fill")]
        internal static extern int XImgProcEdgeBoxesGetBoundingBoxesFill(IntPtr edgeBoxes, IntPtr edgeMap, IntPtr orientationMap, XImgProcEdgeBoxNative[] boxes, int boxCapacity, out int boxCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_alpha")]
        internal static extern int XImgProcEdgeBoxesGetAlpha(IntPtr edgeBoxes, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_alpha")]
        internal static extern int XImgProcEdgeBoxesSetAlpha(IntPtr edgeBoxes, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_beta")]
        internal static extern int XImgProcEdgeBoxesGetBeta(IntPtr edgeBoxes, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_beta")]
        internal static extern int XImgProcEdgeBoxesSetBeta(IntPtr edgeBoxes, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_eta")]
        internal static extern int XImgProcEdgeBoxesGetEta(IntPtr edgeBoxes, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_eta")]
        internal static extern int XImgProcEdgeBoxesSetEta(IntPtr edgeBoxes, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_min_score")]
        internal static extern int XImgProcEdgeBoxesGetMinScore(IntPtr edgeBoxes, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_min_score")]
        internal static extern int XImgProcEdgeBoxesSetMinScore(IntPtr edgeBoxes, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_max_boxes")]
        internal static extern int XImgProcEdgeBoxesGetMaxBoxes(IntPtr edgeBoxes, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_max_boxes")]
        internal static extern int XImgProcEdgeBoxesSetMaxBoxes(IntPtr edgeBoxes, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_edge_min_mag")]
        internal static extern int XImgProcEdgeBoxesGetEdgeMinMag(IntPtr edgeBoxes, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_edge_min_mag")]
        internal static extern int XImgProcEdgeBoxesSetEdgeMinMag(IntPtr edgeBoxes, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_edge_merge_thr")]
        internal static extern int XImgProcEdgeBoxesGetEdgeMergeThr(IntPtr edgeBoxes, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_edge_merge_thr")]
        internal static extern int XImgProcEdgeBoxesSetEdgeMergeThr(IntPtr edgeBoxes, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_cluster_min_mag")]
        internal static extern int XImgProcEdgeBoxesGetClusterMinMag(IntPtr edgeBoxes, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_cluster_min_mag")]
        internal static extern int XImgProcEdgeBoxesSetClusterMinMag(IntPtr edgeBoxes, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_max_aspect_ratio")]
        internal static extern int XImgProcEdgeBoxesGetMaxAspectRatio(IntPtr edgeBoxes, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_max_aspect_ratio")]
        internal static extern int XImgProcEdgeBoxesSetMaxAspectRatio(IntPtr edgeBoxes, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_min_box_area")]
        internal static extern int XImgProcEdgeBoxesGetMinBoxArea(IntPtr edgeBoxes, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_min_box_area")]
        internal static extern int XImgProcEdgeBoxesSetMinBoxArea(IntPtr edgeBoxes, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_gamma")]
        internal static extern int XImgProcEdgeBoxesGetGamma(IntPtr edgeBoxes, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_gamma")]
        internal static extern int XImgProcEdgeBoxesSetGamma(IntPtr edgeBoxes, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_get_kappa")]
        internal static extern int XImgProcEdgeBoxesGetKappa(IntPtr edgeBoxes, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_boxes_set_kappa")]
        internal static extern int XImgProcEdgeBoxesSetKappa(IntPtr edgeBoxes, float value);
    }
}
#endif
